<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/no_uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_uniform"
            style="@style/heading"/>

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/label"/>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            style="@style/input"/>
        <TextView
            android:id="@+id/surname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            style="@style/label"/>

        <EditText
            android:id="@+id/surname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            style="@style/input"/>
        <TextView
            android:id="@+id/class_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classname"
            style="@style/label"/>

        <EditText
            android:id="@+id/class_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            style="@style/input"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            style="@style/button"/>

    </LinearLayout>
</LinearLayout>